# NetMan

./: CMakeLists.txt  LICENSE  README.md
Base/: BaseSocket.cpp  BaseSocket.h  ByteArray.cpp  CMakeLists.txt  Connection.cpp  HostAddress.cpp  InternalAbstract.cpp  InternalAbstract.h  InternalConnection.h  InternalServer.cpp  InternalServer.h  NetworkManager.cpp  NetworkManagerInt.h  Server.cpp  SocketAddress.cpp  SocketAddress.h  SocketAddressBuilder.cpp  SocketAddressBuilder.h  TCPInternalConnection.cpp  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  UDPInternalConnection.cpp  UDPSocket.cpp  UDPSocket.h
Include/NetworkManager/: BSDWinDiff.h  ByteArray.h  Exception.h  ExternalAbstract.h  Server.h
Reactor/: EpollReactor.cpp
base/: BaseSocket.cpp  BaseSocket.h  ByteArray.cpp  Connection.cpp  HostAddress.cpp  InternalAbstract.h  InternalConnection.cpp  InternalConnection.h  InternalServer.cpp  InternalServer.h  NetworkManager.cpp  NetworkManagerInt.cpp  NetworkManagerInt.h  Server.cpp  SocketAddress.cpp  SocketAddress.h  SocketAddressBuilder.cpp  TCPInternalConnection.cpp  TCPInternalConnection.h  TCPServer.cpp  TCPSocket.cpp  TCPSocket.h  UDPInternalConnection.cpp  UDPInternalConnection.h  UDPSocket.cpp  UDPSocket.h
include/: CaseInsFind.h  NonCopyable.h
include/netman/: Connection.h  Exception.h  HostAddress.h  NetworkManager.h  Reactor.h  netman.h
reactor/: CMakeLists.txt  EpollReactor.cpp
